# MSL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: analysis.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  coverage.yml  scan-build.yml
cmake/: AddSelfContainmentTest.cmake  PatchCompileCommands.cmake
cmake/templates/: PackageConfig.cmake.in
data/: config.hpp.in
doc/: building.md  legal.md
docs/: commit-standards.md  contributing.md  installing.md  legal.md
include/msl/: allocator.hpp  library.h
include/msl/blocks/: memory_block.hpp
include/msl/cells/: active_cell.hpp  cell.hpp  cell_activator.hpp  unsafe_cell.hpp
include/msl/cells/detail/: byte_or_quantity.hpp
include/msl/memory/: intrusive_pointer_stack.hpp  uninitialized_storage.hpp  virtual_memory.hpp
include/msl/pointers/: intrusive_pointer_stack.hpp  lifetime_utilities.hpp  not_null.hpp  nullable_pointer.hpp  pointer_like.hpp  pointer_utilities.hpp  raw_pointer.hpp  tagged_ptr.hpp  traversable_pointer.hpp  traversal_utilities.hpp  unaligned_utilities.hpp
include/msl/quantities/: address.hpp  address_io.hpp  alignment.hpp  digital_quantity.hpp  quantity.hpp
include/msl/utilities/: assert.hpp  attributes.hpp  digital_quantity.hpp  dynamic_storage.hpp  intrinsics.hpp  intrusive_pointer_stack.hpp  not_null.hpp  quantity.hpp  source_location.hpp  uninitialized_storage.hpp
src/msl/: library.cpp
src/msl/blocks/: memory_block.cpp
src/msl/cells/: cell.cpp
src/msl/memory/: intrusive_pointer_stack.cpp  virtual_memory.cpp  virtual_memory_impl.hpp
src/msl/memory/default/: virtual_memory_impl.cpp
src/msl/memory/posix/: virtual_memory_impl.cpp
src/msl/memory/win32/: virtual_memory_impl.cpp  windows.hpp
src/msl/pointers/: intrusive_pointer_stack.cpp  not_null.cpp  nullable_pointer.cpp  pointer_like.cpp  pointer_utilities.cpp  raw_pointer.cpp  tagged_ptr.cpp  traversable_pointer.cpp
src/msl/quantities/: address.cpp  address_io.cpp  alignment.cpp  digital_quantity.cpp  quantity.cpp
src/msl/utilities/: assert.cpp  intrinsics.cpp  intrusive_pointer_stack.cpp  source_location.cpp  uninitialized_storage.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/cells/: cell.test.cpp
test/src/memory/: uninitialized_storage.test.cpp
test/src/pointers/: lifetime_utilities.test.cpp  not_null.test.cpp  nullable_pointer.test.cpp  pointer_like.test.cpp  raw_pointer.test.cpp  tagged_ptr.test.cpp  traversable_pointer.test.cpp
test/src/quantities/: quantity.test.cpp
test/src/utilities/: uninitialized_storage.test.cpp
